Made patch notes render with different indexes and themes

--- a/src/core/SCSS/base/_vars.scss
+++ b/src/core/SCSS/base/_vars.scss
@@ -8,6 +8,10 @@ $background-sand: #efe5c7;
   font-family: 'titleFont';
   src: url('/fonts/friz-quadrata-regular.ttf') format('truetype');
 }
+@font-face {
+  font-family: 'textFont';
+  src: url('/fonts/Montserrat.ttf') format('truetype');
+}
 // $white: #ffffff;
 // $black: #000000;
 // $gray-100: #f8f9fa;
