--- a/src/core/SCSS/base/layout/l-patch-notes.scss
+++ b/src/core/SCSS/base/layout/l-patch-notes.scss
@@ -1,14 +1,60 @@
 @import '../vars.scss';
 
 .titletext {
-  color: $cta-yellow;
   font-family: 'titleFont', sans-serif;
+  font-weight: lighter;
+}
+
+.patchnotestextyellow {
+  font-family: 'textFont', serif;
+  color: $cta-yellow;
+}
+
+.patchnotestextsand {
+  font-family: 'textFont', serif;
+  color: $background-sand;
 }
 
 .background {
   background-color: $background-blue;
 }
 
-.sandborder {
-  border: 1px solid $background-sand;
+// Yellow Theme
+.yellow-theme {
+  .titletext {
+    color: $cta-yellow;
+  }
+
+  .themed-text {
+    color: $cta-yellow;
+    font-family: 'textFont', serif;
+  }
+
+  .themed-icon {
+    color: $cta-yellow;
+  }
+
+  .themed-border {
+    border: 2px solid $cta-yellow;
+  }
+}
+
+// Sand Theme
+.sand-theme {
+  .titletext {
+    color: $background-sand;
+  }
+
+  .themed-text {
+    color: $background-sand;
+    font-family: 'textFont', serif;
+  }
+
+  .themed-icon {
+    color: $background-sand;
+  }
+
+  .themed-border {
+    border: 2px solid $background-sand;
+  }
 }
