Reverting navbar change

--- a/src/core/SCSS/base/layout/l-Navbar.scss
+++ b/src/core/SCSS/base/layout/l-Navbar.scss
@@ -1,7 +1,6 @@
 @import '../vars.scss';
 
 .navbg {
-  background-color: $background-blue;
+  background-color: rgba($background-blue, 0.2);
   backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
 }
