patchnotes section with buttons

--- a/src/core/SCSS/base/_vars.scss
+++ b/src/core/SCSS/base/_vars.scss
@@ -3,6 +3,8 @@ $background-blue: #1b3449;
 $cta-blue: #0e7689;
 $cta-yellow: #f9c701;
 $background-sand: #efe5c7;
+$blue-hover: #088ca3;
+$yellow-hover: #ffe26d;
 
 @font-face {
   font-family: 'titleFont';
