--- a/src/core/SCSS/base/layout/l-patch-notes.scss
+++ b/src/core/SCSS/base/layout/l-patch-notes.scss
@@ -3,6 +3,7 @@
 .titletext {
   font-family: 'titleFont', sans-serif;
   font-weight: lighter;
+  text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.8);
 }
 
 .patchnotestextyellow {
