--- a/src/core/SCSS/base/layout/l-news-and-events-page.scss
+++ b/src/core/SCSS/base/layout/l-news-and-events-page.scss
@@ -52,3 +52,10 @@
   color: $background-sand;
   border: 1px solid $background-sand;
 }
+
+.ctabuttons {
+  display: flex;
+  align-items: center;
+  margin-right: 26%;
+  margin-bottom: 5%;
+}
