--- a/src/core/SCSS/base/layout/l-news-and-events-page.scss
+++ b/src/core/SCSS/base/layout/l-news-and-events-page.scss
@@ -52,3 +52,14 @@
   color: $background-sand;
   border: 1px solid $background-sand;
 }
+
+.flavourtext {
+  font-family: 'textFont', sans-serif;
+  color: $background-sand;
+}
+
+.flavourtitle {
+  font-family: 'titleFont', sans-serif;
+  text-transform: uppercase;
+  color: $cta-yellow;
+}
