--- a/src/core/SCSS/base/layout/l-app-sidebar.scss
+++ b/src/core/SCSS/base/layout/l-app-sidebar.scss
@@ -1,3 +1,5 @@
+@import '../vars.scss';
+
 .sidebar-tower {
   position: relative;
   height: 100vh;
@@ -16,4 +18,8 @@
   position: relative;
   z-index: 1;
   overflow-y: auto;
+}
+
+.triggerbackground {
+  background-color: $background-blue;
 }
