--- a/src/core/SCSS/base/layout/l-article-items.scss
+++ b/src/core/SCSS/base/layout/l-article-items.scss
@@ -6,12 +6,12 @@
 
 .sandborder {
   border: 1px solid $background-sand;
+  min-height: 220px;
 }
 
 .newsbox {
   background-color: $background-blue;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  max-width: 1300px;
   width: 100%;
 }
 
@@ -40,7 +40,7 @@
   }
 
   .sandborder {
-    flex-direction: column; // stacked on mobile
+    flex-direction: column;
   }
 
   .title {
@@ -56,7 +56,7 @@
   }
 
   .triangle {
-    height: 150px; // Smaller image height
+    height: 150px;
   }
 }
 
