--- a/src/core/SCSS/base/layout/l-calendar.scss
+++ b/src/core/SCSS/base/layout/l-calendar.scss
@@ -25,7 +25,8 @@
   display: flex;
   width: 100%;
   align-items: center;
-  font-size: 1.5rem;
+  text-transform: uppercase;
+  font-size: 2rem;
   font-weight: bold;
   text-align: center;
   margin-bottom: 1rem;
@@ -53,12 +54,13 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  color: $cta-blue;
+  color: $background-blue;
   font-family: textFont, sans-serif;
 }
 
 .week-days {
   font-weight: 500;
+  font-size: 24px;
   color: $cta-yellow;
   font-family: textFont, sans-serif;
 }
