--- a/src/core/SCSS/base/layout/l-app-sidebar.scss
+++ b/src/core/SCSS/base/layout/l-app-sidebar.scss
@@ -1,25 +1,10 @@
 @import '../vars.scss';
 
 .sidebar-tower {
-  position: relative;
-  height: 100vh;
-}
-
-.background-wrapper {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: -1;
-}
-
-.sidebar-content {
-  position: relative;
-  z-index: 1;
-  overflow-y: auto;
-}
-
-.triggerbackground {
-  background-color: $background-blue;
+  background-image: url('/images/castletower.webp');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
 }
