--- a/src/core/SCSS/base/layout/l-app-sidebar.scss
+++ b/src/core/SCSS/base/layout/l-app-sidebar.scss
@@ -8,3 +8,15 @@
   width: 100%;
   height: 100%;
 }
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .sidebar-tower {
+    background: $background-blue;
+    // background-image: url('/images/castletower.webp');
+    // background-size: cover;
+    // background-position: center;
+    // background-repeat: no-repeat;
+    width: 100%;
+    height: 47%;
+  }
+}
