Fixed background color on front page and sections

--- a/src/core/SCSS/base/layout/l-community-section.scss
+++ b/src/core/SCSS/base/layout/l-community-section.scss
@@ -1,5 +1,9 @@
 @import '../vars.scss';
 
+.CommunitySection {
+  background: $background-blue;
+}
+
 .cta-icons {
   color: $cta-yellow !important;
 }
