--- a/src/core/SCSS/base/layout/l-app-sidebar.scss
+++ b/src/core/SCSS/base/layout/l-app-sidebar.scss
@@ -2,6 +2,7 @@
 
 .sidebar-tower {
   background-color: $background-blue;
+
   &::before {
     content: '';
     position: absolute;
@@ -10,8 +11,7 @@
     right: 0;
     bottom: 0;
     background-image: url('/images/castletower.webp');
-    background-size: 137% auto;
-    background-position: top center;
+    background-size: cover;
     background-repeat: no-repeat;
     z-index: -1;
   }
