--- a/src/core/SCSS/base/components/_buttons.scss
+++ b/src/core/SCSS/base/components/_buttons.scss
@@ -41,3 +41,25 @@
     border: 1px solid $background-sand;
   }
 }
+
+.PaginationButton {
+  padding: 0.5rem 1.25rem; // px-5 py-2
+  font-weight: 500;
+  border-radius: 0.375rem; // rounded-md
+  transition: background-color 0.2s ease;
+
+  &.is-disabled {
+    background-color: #1b3449;
+    color: white;
+    cursor: not-allowed;
+  }
+
+  &.is-enabled {
+    background-color: #f9c701;
+    color: black;
+
+    &:hover {
+      background-color: #eab308; // equivalent to Tailwind's yellow-600
+    }
+  }
+}
