--- a/src/core/SCSS/base/layout/l-newsandevents.scss
+++ b/src/core/SCSS/base/layout/l-newsandevents.scss
@@ -5,7 +5,22 @@
   color: $background-blue;
 }
 
-.WatchUs_Block{
+.WatchUs_Text {
+  font-family: 'titleFont', sans-serif;
+  font-weight: lighter;
+  text-transform: uppercase;
+  color: $background-blue;
+  text-align: center;
+  margin-bottom: 16px;
+}
+
+.WatchUs_Subtext {
+  font-family: 'textFont', sans-serif;
+  color: $background-blue;
+  margin-bottom: 16px;
+}
+
+.WatchUs_Block {
   background-color: $background-sand;
   color: $background-blue;
 }
@@ -47,7 +62,7 @@
     height: 100%;
     transition: transform 0.5s ease-in-out;
     z-index: 1;
-  
+
     > div {
       min-width: 100%;
       height: 100%;
@@ -55,7 +70,7 @@
       justify-content: center;
       align-items: center;
     }
-  
+
     iframe {
       width: 100%;
       height: 100%;
