--- a/src/core/SCSS/base/layout/l-calendar.scss
+++ b/src/core/SCSS/base/layout/l-calendar.scss
@@ -175,3 +175,90 @@
   font-family: textFont, sans-serif;
   color: $background-sand;
 }
+
+// Mobile Component styling
+.calendar-mobile-container {
+  padding: 1rem; 
+
+  h2 {
+    font-size: 1.125rem; 
+    font-weight: 600; 
+  }
+
+  .days-container {
+    display: flex;
+    overflow-x: auto;
+    gap: 0.75rem; 
+    padding-bottom: 0.5rem; 
+
+    .day {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 3.5rem; 
+      height: 5rem; 
+      cursor: pointer;
+      background-color: $cta-yellow;
+      color: $background-blue;
+
+      &.selected {
+        background-color: $yellow-hover; 
+        color: #ffffff; 
+      }
+
+      &.today {
+        border: 2px solid #3b82f6; 
+      }
+
+      .weekday {
+        font-size: 1.10rem;
+        font-weight: 600;
+      }
+
+      .date {
+        font-size: 1.25rem; 
+        font-weight: 600; 
+        color: $background-blue;
+      }
+
+      .has-tournament {
+        background-color: $cta-yellow;
+      }
+
+      .tournament-indicator {
+        width: 0.5rem;
+        height: 0.5rem; 
+        background-color: #ef4444; 
+        border-radius: 50%; 
+        margin-top: 0.25rem; 
+      }
+    }
+  }
+  
+  .week-changer {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+    text-transform: uppercase;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 1rem;
+    color: $cta-yellow;
+    font-family: textFont, sans-serif;
+
+    h2{
+      font-size: 1.75rem;
+    }
+
+    .week-nav{
+      border: none;
+      padding: 0.5rem 1rem;
+      font-size: 1.75rem;
+      cursor: pointer;
+      color: $cta-yellow;
+      font-family: textFont, sans-serif;
+    }
+  }
+}
