--- a/src/core/SCSS/base/sections/s-news-and-events-section.scss
+++ b/src/core/SCSS/base/sections/s-news-and-events-section.scss
@@ -1,5 +1,9 @@
 @import '../vars.scss';
 
+.NewsSection {
+  background-color: $background-sand;
+}
+
 .naetitle {
   font-family: 'titleFont', sans-serif;
   font-weight: lighter;
