--- a/src/core/SCSS/base/_vars.scss
+++ b/src/core/SCSS/base/_vars.scss
@@ -5,6 +5,7 @@ $cta-yellow: #f9c701;
 $background-sand: #efe5c7;
 $blue-hover: #088ca3;
 $yellow-hover: #ffe26d;
+$footer-background: #102535;
 
 @font-face {
   font-family: 'titleFont';
