--- a/src/core/SCSS/base/layout/l-burgermenu.scss
+++ b/src/core/SCSS/base/layout/l-burgermenu.scss
@@ -3,9 +3,13 @@
 .backgroundburger {
   background-image: url('/images/castletower.webp');
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 100% 100%;
   background-position: center;
   position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  padding-right: 16%;
 }
 
 .backgroundburger a {
