--- a/src/core/SCSS/base/sections/s-hero-section.scss
+++ b/src/core/SCSS/base/sections/s-hero-section.scss
@@ -1,5 +1,14 @@
 @import '../vars.scss';
 
-.HeroSection{
+.HeroSection {
   background: $background-blue;
+}
+
+.herobg img {
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
