--- a/src/core/SCSS/base/layout/page/p-stand-alone-page.scss
+++ b/src/core/SCSS/base/layout/page/p-stand-alone-page.scss
@@ -78,7 +78,6 @@
   display: flex;
   flex-direction: row;
   gap: 1rem;
-  margin: 1rem 0;
   background: $background-blue;
   border-top: 2px solid $background-sand;
   border-bottom: 2px solid $background-sand;
@@ -163,4 +162,8 @@
       transform: scale(1.1);
     }
   }
+}
+
+.segment-reverse-bg {
+  padding: 0;
 }
