--- a/src/core/SCSS/base/layout/page/p-stand-alone-page.scss
+++ b/src/core/SCSS/base/layout/page/p-stand-alone-page.scss
@@ -85,11 +85,11 @@
 
   &-title {
     font-family: titleFont, sans-serif;
-    font-size: 3.25rem;
+    font-size: 3rem;
     text-transform: uppercase;
-    width: 70%;
+    width: 100%;
     color: $cta-yellow;
-    padding: 2.5rem 0;
+    padding: 2.5rem 2rem 2.5rem 0;
   }
 
   &-item {
@@ -164,6 +164,140 @@
   }
 }
 
-.segment-reverse-bg {
-  padding: 0;
+.stand-alone-footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-top: 5rem;
+
+  &-title {
+    font-family: titleFont, sans-serif;
+    font-size: 3rem;
+    text-transform: uppercase;
+    color: $cta-yellow;
+    padding-bottom: 2rem;
+  }
+
+  &-following {
+    width: 80%;
+    text-align: center;
+    font-family: textFont, sans-serif;
+    font-size: 1.5rem;
+  }
+}
+
+.segment-container {
+  display: flex;
+  flex-direction: column;
+  border-bottom: 2px solid $background-sand;
+
+  @media (min-width: 768px) {
+    flex-direction: row;
+  }
+
+  &.reverse {
+    @media (min-width: 768px) {
+      flex-direction: row-reverse;
+    }
+  }
+}
+
+.segment-content {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  z-index: 20;
+  gap: 1rem;
+
+  @media (min-width: 768px) {
+    width: 50%;
+  }
+
+  &.align-left {
+    text-align: right;
+
+    @media (min-width: 768px) {
+      text-align: left;
+      align-items: flex-start;
+    }
+  }
+
+  &.align-right {
+    text-align: right;
+
+    @media (min-width: 768px) {
+      text-align: left;
+      align-items: flex-end;
+    }
+  }
+}
+
+.segment-title {
+  font-family: titleFont, sans-serif;
+  color: $cta-yellow;
+  font-size: 3rem;
+  padding: 2rem 5rem;
+}
+
+.segment-description {
+  font-family: textFont, sans-serif;
+  color: $background-sand;
+  font-size: 1.15rem;
+  line-height: 1.75;
+  padding: 0 6rem 5rem 5rem;
+  width: 100%;
+}
+
+.segment-note {
+  font-size: 0.875rem;
+  line-height: 1.5;
+  opacity: 0.85;
+}
+
+.segment-media-wrapper {
+  width: 100%;
+  position: relative;
+
+  @media (min-width: 768px) {
+    width: 50%;
+  }
+}
+
+.segment-media {
+  position: relative;
+  width: 100%;
+  height: 16rem;
+  overflow: hidden;
+
+  @media (min-width: 768px) {
+    height: 100%;
+  }
+}
+
+.segment-video,
+.segment-image {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 0;
+}
+
+.segment-gradient {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+
+  &.left {
+    background: linear-gradient(to left, transparent, #1b3449);
+  }
+
+  &.right {
+    background: linear-gradient(to right, transparent, #1b3449);
+  }
 }
