--- a/src/core/SCSS/base/layout/page/p-stand-alone-page.scss
+++ b/src/core/SCSS/base/layout/page/p-stand-alone-page.scss
@@ -219,13 +219,13 @@
     text-align: right;
 
     @media (min-width: 768px) {
-      text-align: left;
+      text-align: right;
       align-items: flex-start;
     }
   }
 
   &.align-right {
-    text-align: right;
+    text-align: left;
 
     @media (min-width: 768px) {
       text-align: left;
@@ -237,8 +237,9 @@
 .segment-title {
   font-family: titleFont, sans-serif;
   color: $cta-yellow;
-  font-size: 3rem;
-  padding: 2rem 5rem;
+  font-size: 2.75rem;
+  padding: 2rem 3.25rem;
+  text-transform: uppercase;
 }
 
 .segment-description {
@@ -246,8 +247,9 @@
   color: $background-sand;
   font-size: 1.15rem;
   line-height: 1.75;
-  padding: 0 6rem 5rem 5rem;
+  padding: 0 3.5rem 5rem 3.5rem;
   width: 100%;
+  text-wrap: pretty;
 }
 
 .segment-note {
