--- a/src/core/SCSS/base/layout/l-burgermenu.scss
+++ b/src/core/SCSS/base/layout/l-burgermenu.scss
@@ -9,7 +9,7 @@
   z-index: 100;
   top: 0;
   left: 0;
-  padding-right: 16%;
+  background-color: $background-blue;
 }
 
 .backgroundburger a {
@@ -18,4 +18,8 @@
 
 .backgroundburger a:hover {
   color: #ffd700;
+}
+
+.buttonbg {
+  background-color: $background-blue;
 }
