--- a/src/core/SCSS/base/layout/page/p-units-page.scss
+++ b/src/core/SCSS/base/layout/page/p-units-page.scss
@@ -1,6 +1,7 @@
 @import '../../_vars.scss';
+@import '../../_mixins.scss';
 
-.units-page-background {
+.units-page {
   background-color: $background-blue;
 }
 
@@ -9,4 +10,158 @@
   background-size: cover;
   height: 50vh;
   width: 100%;
+
+  &-title {
+    @include hero-title;
+  }
+}
+
+.units-page-navigation {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+  padding: 2rem 0;
+  color: $cta-yellow;
+  font-size: 1.5rem;
+  font-family: textFont, sans-serif;
+  text-align: center;
+  // border-bottom: 2px solid $background-sand;
+
+  a {
+    color: $cta-yellow;
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+
+  a.active {
+    color: $background-sand;
+
+    .units-page-navigation-city-icon,
+    .units-page-navigation-port-icon,
+    .units-page-navigation-forest-icon {
+      background-color: $background-sand;
+    }
+  }
+}
+
+.units-page-navigation-type ul,
+.units-page-navigation-unit ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1.5rem;
+  padding: 0;
+  margin: 2rem 0;
+  list-style: none;
+}
+
+.units-page-navigation-city,
+.units-page-navigation-port,
+.units-page-navigation-forest {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem;
+  width: 100px;
+  text-align: center;
+
+  .units-page-navigation-forest-icon,
+  .units-page-navigation-city-icon,
+  .units-page-navigation-port-icon {
+    width: 50px;
+    height: 50px;
+    margin-bottom: 0.5rem;
+    background-color: $cta-yellow;
+    border-radius: 50%;
+    background-size: cover;
+  }
+}
+
+.units-page-panel {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 5rem;
+  margin: 0 auto;
+  text-align: center;
+  border-bottom: 2px solid $background-sand;
+
+  h1 {
+    font-family: titleFont, sans-serif;
+    font-size: 2.5rem;
+    text-transform: uppercase;
+    color: $cta-yellow;
+    margin: 0 auto;
+  }
+
+  h2 {
+    font-family: titleFont, sans-serif;
+    font-size: 4rem;
+    text-transform: uppercase;
+    color: $cta-yellow;
+    margin: 0 auto;
+    padding-bottom: 2rem;
+  }
+
+  p {
+    margin-bottom: 1rem;
+    line-height: 1.5;
+    font-size: 1.25rem;
+    font-family: textFont, sans-serif;
+    color: $background-sand;
+    text-align: center;
+  }
+
+  &-content {
+    width: 60%;
+  }
+}
+
+.units-page-panel-image-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 2rem;
+  background-color: $cta-blue;
+  border-radius: 50%;
+  border: 3px solid $cta-yellow;
+  width: 300px;
+  height: 300px;
+
+  img {
+    transition: transform 0.7s ease-in-out;
+
+    &:hover {
+      transform: scale(1.35);
+    }
+  }
+}
+
+.units-page-panel-image-wrapper {
+  position: relative;
+  width: 350px;
+  height: 350px;
+
+  .units-page-panel-ring {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: rotate(220deg); // Start from top
+    z-index: 1;
+  }
+
+  .units-page-panel-image {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    position: relative;
+    z-index: 2;
+  }
 }
