SEO and other stuff

--- a/src/core/SCSS/base/layout/l-burgermenu.scss
+++ b/src/core/SCSS/base/layout/l-burgermenu.scss
@@ -10,6 +10,10 @@
   top: 0;
   left: 0;
   background-color: $background-blue;
+
+  @media screen and (max-width: 768px) {
+    background-color: transparent;
+  }
 }
 
 .backgroundburger a {
