--- a/src/core/SCSS/base/layout/page/p-news-and-events-page.scss
+++ b/src/core/SCSS/base/layout/page/p-news-and-events-page.scss
@@ -33,8 +33,8 @@
 }
 
 .PlayNowButton {
-  width: 150px;
-  height: 40px;
+  width: 150px !important;
+  height: 40px !important;
   background-color: $cta-blue;
   font-family: titleFont, sans-serif;
   color: $background-sand;
