Fixed firebase routing, readjusted frontpage news and including modal compability in the footer

--- a/src/core/SCSS/base/layout/l-Navbar.scss
+++ b/src/core/SCSS/base/layout/l-Navbar.scss
@@ -1,5 +1,10 @@
 @import '../vars.scss';
 
 .navbg {
-  background-color: rgba($background-blue, 0.9);
+  background-color: $footer-background;
+}
+
+.navbarlogo {
+  width: 100%;
+  height: 100%;
 }
