Logic refactor including localization refactor

--- a/src/core/SCSS/base/sections/s-news-and-events-section.scss
+++ b/src/core/SCSS/base/sections/s-news-and-events-section.scss
@@ -20,3 +20,11 @@
   line-height: 1.5;
   margin-bottom: 16px;
 }
+
+.maintext {
+  font-family: 'textFont', sans-serif;
+  color: $background-sand;
+  font-size: 1rem;
+  line-height: 1.5;
+  margin-bottom: 16px;
+}
