--- a/src/core/SCSS/base/components/_buttons.scss
+++ b/src/core/SCSS/base/components/_buttons.scss
@@ -72,6 +72,7 @@
   font-weight: 500;
   border-radius: 0.375rem;
   transition: background-color 0.2s ease;
+  cursor: pointer;
 
   &.is-disabled {
     background-color: #1b3449;
