--- a/src/core/SCSS/base/layout/page/units-page/p-units-page-icons.scss
+++ b/src/core/SCSS/base/layout/page/units-page/p-units-page-icons.scss
@@ -31,16 +31,19 @@
   &.icon-tank {
     background-image: url('/images/icons/Tank_icon.webp');
   }
-  &.icon-submarine {
-    background-image: url('/icons/submarine.svg');
+  &.icon-transport-ship {
+    background-image: url('/images/icons/TransportShip.webp');
   }
-  &.icon-frigate {
-    background-image: url('/icons/frigate.svg');
+  &.icon-armoured-transport-ship {
+    background-image: url('/images/icons/Rifleman_icon.webp');
   }
-  &.icon-destroyer {
-    background-image: url('/icons/destroyer.svg');
+  &.icon-warship-a {
+    background-image: url('/images/icons/WarshipA.webp');
   }
-  &.icon-carrier {
-    background-image: url('/icons/carrier.svg');
+  &.icon-warship-b {
+    background-image: url('/images/icons/WarshipB.webp');
+  }
+  &.icon-battleship-ss {
+    background-image: url('/images/icons/WarshipSS.webp');
   }
 }
