Mobile responsiveness of units panel

--- a/src/core/SCSS/base/_mixins.scss
+++ b/src/core/SCSS/base/_mixins.scss
@@ -6,6 +6,7 @@
   margin: 0 auto;
   padding: 2rem 0;
   text-shadow: 3px 3px 4px $background-blue;
+  text-align: center;
 }
 
 @mixin section-title {
