--- a/src/core/SCSS/base/layout/page/units-page/p-units-page-images.scss
+++ b/src/core/SCSS/base/layout/page/units-page/p-units-page-images.scss
@@ -25,6 +25,12 @@
     right: 55px;
   }
 
+  .units-page-panel-general-image {
+    @media (max-width: 768px) {
+      transform: scale(0.8);
+    }
+  }
+
   img {
     transition: transform 0.7s ease-in-out;
 
