--- a/src/core/SCSS/base/layout/page/units-page/p-units-page.scss
+++ b/src/core/SCSS/base/layout/page/units-page/p-units-page.scss
@@ -57,7 +57,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 10rem;
+  gap: 7rem;
   padding: 0;
   margin: 2rem 0;
   list-style: none;
@@ -159,6 +159,34 @@
 
   &-content {
     width: 60%;
+  }
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+    padding: 2rem;
+    margin: 0 auto;
+
+    h1 {
+      font-size: 1.5rem;
+    }
+
+    h2 {
+      font-size: 2.5rem;
+    }
+
+    p {
+      font-size: 1rem;
+    }
+
+    &-content {
+      width: 100%;
+    }
+
+    .units-page-panel-image-container {
+      margin-top: 1rem;
+      width: 250px;
+      height: 250px;
+    }
   }
 }
 
