Okay, now it is ready

--- a/src/core/SCSS/base/layout/page/units-page/p-units-page-icons.scss
+++ b/src/core/SCSS/base/layout/page/units-page/p-units-page-icons.scss
@@ -35,7 +35,7 @@
     background-image: url('/images/icons/TransportShip.webp');
   }
   &.icon-armoured-transport-ship {
-    background-image: url('/images/icons/Rifleman_icon.webp');
+    background-image: url('/images/icons/ATS-icon.webp');
   }
   &.icon-warship-a {
     background-image: url('/images/icons/WarshipA.webp');
