Unit scroll animation on selection, navbar pixed on mobile

--- a/src/core/SCSS/base/layout/l-burgermenu.scss
+++ b/src/core/SCSS/base/layout/l-burgermenu.scss
@@ -36,4 +36,8 @@
   @media screen and (max-width: 768px) {
     margin-top: 17rem;
   }
+
+  @media screen and (max-width: 400px) {
+    margin-top: 12rem;
+  }
 }
