--- a/src/core/SCSS/base/layout/page/aboutus-page/p-about-us-page.scss
+++ b/src/core/SCSS/base/layout/page/aboutus-page/p-about-us-page.scss
@@ -7,6 +7,12 @@
   padding-bottom: 50px;
 }
 
+.about-us-title {
+  @include about-us-title;
+  padding: 2rem 0;
+  text-shadow: 3px 3px 4px $background-blue;
+}
+
 .about-text {
   padding-top: 50px;
   display: flex;
@@ -23,13 +29,6 @@
   h2 {
     font-family: titleFont, sans-serif;
     font-size: 1.5rem;
-    text-transform: uppercase;
-    color: $cta-yellow;
-  }
-
-  h1 {
-    font-family: titleFont, sans-serif;
-    font-size: 3.25rem;
     text-transform: uppercase;
     color: $cta-yellow;
   }
