--- a/src/core/SCSS/base/layout/leaderboard/l-leaderboard-table.scss
+++ b/src/core/SCSS/base/layout/leaderboard/l-leaderboard-table.scss
@@ -33,6 +33,7 @@
   color: $background-sand;
   font-family: 'textFont', sans-serif;
   text-align: center;
+  font-size: 1.5rem;
 }
 
 .mobilecard {
