Units done (currently)

--- a/src/core/SCSS/base/layout/page/units-page/p-units-page-icons.scss
+++ b/src/core/SCSS/base/layout/page/units-page/p-units-page-icons.scss
@@ -31,6 +31,12 @@
   &.icon-tank {
     background-image: url('/images/icons/Tank_icon.webp');
   }
+  &.icon-marine {
+    background-image: url('/images/icons/marine-icon.webp');
+  }
+  &.icon-admiral {
+    background-image: url('/images/icons/admiral-icon.webp');
+  }
   &.icon-transport-ship {
     background-image: url('/images/icons/TransportShip.webp');
   }
