leaderboard: next-text color

--- a/src/core/SCSS/base/components/_buttons.scss
+++ b/src/core/SCSS/base/components/_buttons.scss
@@ -75,14 +75,16 @@
   cursor: pointer;
 
   &.is-disabled {
-    background-color: #1b3449;
-    color: white;
+    background-color: $background-blue;
+    color: $background-sand;
     cursor: not-allowed;
+    font-family: "textFont";
   }
 
   &.is-enabled {
-    background-color: #f9c701;
-    color: black;
+    background-color: $cta-yellow;
+    color: $background-blue;
+    font-family: "textFont";
 
     &:hover {
       background-color: #ffe26d;
