--- a/src/core/SCSS/base/layout/leaderboard/l-leaderboard-page.scss
+++ b/src/core/SCSS/base/layout/leaderboard/l-leaderboard-page.scss
@@ -4,3 +4,8 @@
   background-color: $background-blue;
   color: $background-sand;
 }
+
+.leaderboard_next_text {
+  color: $background-sand;
+  font-family: "textFont", sans-serif;
+}
