--- a/src/core/SCSS/base/sections/s-news-and-events-section.scss
+++ b/src/core/SCSS/base/sections/s-news-and-events-section.scss
@@ -2,7 +2,11 @@
 @import '../mixins.scss';
 
 .NewsSection {
+  background-image: url('/images/background-section.webp');
   background-color: $background-blue;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .naetitle {
