Added children prop to burgermenu and sidebar, including made fixes to our structure

--- a/src/core/SCSS/base/sections/s-newsandevents.scss
+++ b/src/core/SCSS/base/sections/s-newsandevents.scss
@@ -2,7 +2,7 @@
 @import '../_mixins.scss';
 
 .Section_Background {
-  background-image: url('/images/testimage.webp');
+  background-image: url('/images/twitchsection.webp');
   background-color: $background-blue;
   color: $background-sand;
   background-size: cover;
