--- a/src/core/SCSS/base/sections/s-news-and-events-section.scss
+++ b/src/core/SCSS/base/sections/s-news-and-events-section.scss
@@ -2,7 +2,7 @@
 @import '../mixins.scss';
 
 .NewsSection {
-  background-image: url('/images/testimage.webp');
+  background-image: url('/images/newsandeventssection.webp');
   background-color: $background-blue;
   background-size: cover;
   background-position: center;
